Fix overflow issue with summary container

--- a/src/styles/components/_summary.scss
+++ b/src/styles/components/_summary.scss
@@ -18,6 +18,7 @@
   justify-content: center;
   align-items: center;
   background-color: black;
+  overflow: hidden;
 }
 
 .summary-screen {
@@ -52,6 +53,7 @@
   height: 40%;
   display: flex;
   justify-content: center;
+  overflow: hidden;
 }
 
 .stand {
